--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,21 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond&display=swap');
+
+:root{
+  --off-white: #F0F0F0;
+  --squid-ink: #rgba(0,0,0,.9);
+}
+
+body{
+  font-family: 'EB Garamond', serif;
+  background-color: var(--off-white);
+  color: var(--squid-ink);
+  margin: 6vw;
+}
+
+h1{
+  font-size: 24px;
   text-align: center;
+  color: var(--off-white);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
