--- a/src/Hero/style.scss
+++ b/src/Hero/style.scss
@@ -1,5 +1,10 @@
 .Container{
 
+    // position: absolute;
+    // top: 10px;
+    // right: 10px;
+    // left: 10px;
+
     .type{
         width: 100%;
         position: absolute;
@@ -7,11 +12,38 @@
     .intro{ 
         width: 100%;
         position: absolute;
-        top: 33vw; 
+        top: 25vw; 
     }
-    .outro{ top: 66vw; }
+    .outro{ 
+        width: 100%;
+        position: absolute;
+        top: 95vw; 
+    }
 
-    img{
+    .brand-lockup-container{
+        position: absolute;
+        top: 65vw;
+        display: flex;
+        width: 100%;
+        
+        text-align: center;
+        justify-content: space-evenly;
+
+        .brand-lockup-container-inner{       
+            display: flex;
+            flex-direction: row;
+            align-self: center;
+        }
+
+        img{        
+            width: 70px;
+            height: 70px;
+            margin: 2vw;
+            object-fit: contain;
+        }
+    }
+
+    .hero-image-intro{
         width: 100%;
         object-fit: cover;
     }
