Add animating icons on scroll

--- a/src/Parallax/style.scss
+++ b/src/Parallax/style.scss
@@ -1,3 +1,9 @@
 .parallax-container{
+
+    display: flex;
     transform: translate3d(0,0,0);
+
+    *{
+        transform: translate3d(0,0,0);
+    }
 }
