--- a/src/Hero/style.scss
+++ b/src/Hero/style.scss
@@ -1,9 +1,8 @@
 .Container{
 
-    // position: absolute;
-    // top: 10px;
-    // right: 10px;
-    // left: 10px;
+    position: relative;
+    display: block;
+    width: 100%;
 
     .type{
         width: 100%;
@@ -17,34 +16,16 @@
     .outro{ 
         width: 100%;
         position: absolute;
-        top: 95vw; 
-    }
-
-    .brand-lockup-container{
-        position: absolute;
-        top: 65vw;
-        display: flex;
-        width: 100%;
-        
-        text-align: center;
-        justify-content: space-evenly;
-
-        .brand-lockup-container-inner{       
-            display: flex;
-            flex-direction: row;
-            align-self: center;
-        }
-
-        img{        
-            width: 70px;
-            height: 70px;
-            margin: 2vw;
-            object-fit: contain;
-        }
+        top: 105vw; 
     }
 
     .hero-image-intro{
-        width: 100%;
+        //position: absolute;
+        display: flex;
+        margin: 0 auto;
+        margin-top: 2.5vw;
+        width: 95vw;
+   
         object-fit: cover;
     }
 }
