--- a/src/Hero/style.scss
+++ b/src/Hero/style.scss
@@ -4,6 +4,8 @@
     width: 100%;
     overflow: hidden;
 
+    background:var(--off-white);
+
     h1{
         max-width: 60%;
         text-align: center;
