--- a/src/LocationSlate/style.scss
+++ b/src/LocationSlate/style.scss
@@ -19,18 +19,27 @@
         left: 0;
         bottom: 0;
         right: 0;
-        background-color: rgba(0,0,0,.5);
+        background-color: rgba(0,0,0,.8);
     }
 
     .slate-overlay{
         position: absolute;
-        width: 80%;
-        margin: 0 auto;
+        top: 20%;
+        left: 20%;
+        //margin: 0 auto;
         
-        align-self: center;
 
         h1{
+            text-align: left;
             color: var(off-white);
+        }
+
+        h2{
+            text-align: left;
+            background-color: var(--off-white);
+            color: var(--squidink);
+            padding: 10px;
+            font-size: 24px;
         }
     }
 }
